fix: Center align row-5 to correct layout

--- a/futurekeyboard.css
+++ b/futurekeyboard.css
@@ -20,7 +20,7 @@
 }
 
 #futureKeyboardBox .row-5 {
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 #futureKeyboardBox .key {
