--- a/keyboard.css
+++ b/keyboard.css
@@ -19,9 +19,9 @@
   margin: 1px 0;
 }
 
-/* 5行目だけ左寄せ */
+/* 5行目も中央寄せ */
 #keyboardBox .row-5 {
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 #keyboardBox .key {
